# recall

./: LICENSE  README.en.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml
recall/: __init__.py  cli.py  config.py  index.py  mcp.py  parse.py  store.py
tests/: test_cli.py  test_index_search.py  test_mcp.py  test_parse.py
